[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "typesense-server-wrapper-chunk2"
description = "Python wrapper for Typesense Server Chunk 2"
authors = [
    {"name" = "Grant Jenks", "email" = "contact@grantjenks.com"},
]
requires-python = ">=3.7"
keywords = ["search", "typesense"]
license = {"text" = "Apache 2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
version = '1'

[project.urls]
Documentation = "https://grantjenks.com/docs/python-typesense-server-wrapper/"
Funding = "https://gum.co/python-typesense-server-wrapper"
Source = "https://github.com/grantjenks/python-typesense-server-wrapper"
Tracker = "https://github.com/grantjenks/python-typesense-server-wrapper/issues"

[tool.setuptools.packages.find]
where = ["src"]
